Добавлено окно статистики

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
   // вычисляем начальную координату мага по вертикали относительно 2/3 высоты
   // игрового поля от земли
   var getWizardY = function (height) {
-    // т.к. начало кооординат начинается сверху, то 2/3 высоты от земли равно 1/3 сверху
-    return height / 3;
+    // т.к. начало кооординат начинается сверху, то 2/3 высоты от земли равно 1/3 сверху c учетом высоты мага
+    return height / 3 - getWizardHeight() ;
   };
 </script>
-
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
