--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@
 <script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
-
+<script src="js/dialog.js"></script>
 </body>
 </html>
