--- a/index.html
+++ b/index.html
@@ -211,9 +211,12 @@
     return height / 3 - getWizardHeight() ;
   };
 </script>
+
 <script src="js/setup.js"></script>
+<script src="js/renderwizards.js"></script>
+<script src="js/dragndrop.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
-<script src="js/dialog.js"></script>
+
 </body>
 </html>
