--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Код и Магия</title>
 </head>
 <body>
-
 <header>
   <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86">
@@ -210,7 +209,7 @@
     return height / 3 - getWizardHeight() ;
   };
 </script>
-<script src="js/renderwizards.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/dragndrop.js"></script>
