--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+  <div class="error hidden"><!--Bлок для вывода ошибок I/O--></div>
   <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86">
     <g id="wizard">
