--- a/index.html
+++ b/index.html
@@ -210,9 +210,11 @@
     return height / 3 - getWizardHeight() ;
   };
 </script>
+<script src="js/wizard.js"></script>
+<script src="js/debounce.js"></script>
+<script src="js/similar.js"></script>
+<script src="js/render.js"></script>
 <script src="js/backend.js"></script>
-<script src="js/setup.js"></script>
-<script src="js/colorize.js"></script>
 <script src="js/dragndrop.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
