--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     return height / 3 - getWizardHeight() ;
   };
 </script>
+<script src="js/avatar.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/similar.js"></script>
